# Deep-Learning

./: CNN_image_classifer.ipynb  ML-Zoomcamp9-Severless.ipynb  MLzoomcamp8-DeepLearning-Homework (1).ipynb  MLzoomcamp8-DeepLearning-Homework-checkpoint.ipynb  MLzoomcamp8-DeepLearning-NeuralNetwork-checkpoint.ipynb  MLzoomcamp8-DeepLearning-NeuralNetwork.ipynb  TensorFlow-Model-Lambda-Serverless.ipynb
build_llm/: README.md  gpt-like-model.ipynb  llm_from_scratch.ipynb  pyproject.toml  pytorch-examples.ipynb
