[project]
name = "build-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pylzma>=0.5.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]
